--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity4"></activity>
-        <activity android:name=".Activity3" />
-        <activity android:name=".Activity2" />
-        <activity android:name=".Activity1">
+        <activity android:name=".ScoreboardActivity"></activity>
+        <activity android:name=".PostScoreActivity" />
+        <activity android:name=".QuestionActivity" />
+        <activity android:name=".HomeScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
